--- a/convenientui/src/main/AndroidManifest.xml
+++ b/convenientui/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.scorpio.ui" />
+    package="com.sample.ui" />
